ADD(profile): update profile photo
